# anisynchronise

./: .gitignore  pyproject.toml  readme.md
anisynchronise/: anilog.py  client_sync.py  collector_sync.py  config.py  file_ops.py  inward_sync.py  robocopy.py  testing.py  vid_sync.py
anisynchronise/types/: ani_log_types.py  client_sync_types.py  config_types.py  inward_sync_types.py
config/: anisync-client-config.default.yml  anisync-config.yml  config2.yml
doc/: client-sync.md  collector-sync.md  plan.md  replicate-plan.md
test/: a.txt  huh.py  test-update.json  test_anilog.py  test_client_sync.py  test_collector_sync.py  test_file_ops.py  test_inward_sync.py  test_read_log.py
test/folders-test/: regen-test-folder.bat  run_test.py  test_collector_sync.py  test_gen_client_json.py
test/folders-test/client/vids/: [Erai-raws] BanG Dream! It's MyGO!!!!! - 11 [1080p][Multiple Subtitle][EBC634B1].mkv  [Erai-raws] BanG Dream! It's MyGO!!!!! - 12 [1080p][Multiple Subtitle][85CA50BE].mkv  [Erai-raws] Ryza no Atelier - Tokoyami no Joou to Himitsu no Kakurega - 10 [1080p][Multiple Subtitle][39D9B595].mkv  [Erai-raws] Ryza no Atelier - Tokoyami no Joou to Himitsu no Kakurega - 12 [1080p][HEVC][Multiple Subtitle][595FFDD9].mkv
test/folders-test/original-folders/client/vids/: [Erai-raws] Ryza no Atelier - Tokoyami no Joou to Himitsu no Kakurega - 09 [1080p][Multiple Subtitle][139289A7].mkv  [Erai-raws] Ryza no Atelier - Tokoyami no Joou to Himitsu no Kakurega - 11 [1080p][Multiple Subtitle][B6D4F7BD].mkv  (+2 more)
test/log_tests/: test_anilog.py
(+12 files in other folders)
