[tool.poetry]
name = "anisynchronise"
version = "0.1.0"
description = ""
authors = ["risonakamo"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
loguru = "^0.7.2"
devtools = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
