[tool.poetry]
name = "anisynchronise"
version = "0.1.0"
description = ""
authors = ["risonakamo"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
loguru = "^0.7.2"
devtools = "^0.12.2"
pyyaml = "^6.0.1"
pytest = "^7.4.2"
rich = "^13.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
